@startuml path_tracing_class_diagram_static
' ============================================================
' Diagrama de Classes (ESTÁTICO) — src/path_tracing
' Foco: geometria (shape + BVH), materiais, luzes e entidades
' estruturais da cena. Forçado a uma única página.
' ============================================================

title Diagrama de Classes — src/path_tracing (ESTÁTICO)\nGeometria, materiais, luzes (atributos + métodos)

page 1 1
top to bottom direction
skinparam classAttributeIconSize 0
hide empty members
skinparam linetype ortho
skinparam package {
  BackgroundColor #FAFAFA
  BorderColor #888
  FontStyle bold
}
skinparam class {
  BorderColor #555
  BackgroundColor #FFFFFF
  HeaderBackgroundColor #EFEFEF
}
skinparam dpi 150
skinparam pageMargin 10
scale 0.50

' ============================================================
' 1. Entidades estruturais da cena
' ============================================================
package "path_tracing (raiz — entidades estruturais)" as root {
  class Ray {
    +origin: glm.vec3
    +direction: glm.vec3
  }
  class Hit {
    +t: float
    +pos: glm.vec3
    +normal: glm.vec3
    +geo_normal: glm.vec3
    +material: BSDF | None
    +light: Light | None
    +front_face: bool
    +backfacing: bool
    --
    +set_face_normal(ray, outward_normal)
  }
  class Camera {
    +eye, center, up: glm.vec3
    +fov: float
    +width, height: int
    +focal_distance: float
    --
    +generate_ray(xn, yn): Ray
  }
  enum SamplingMode {
    REGULAR
    UNIFORM
    STRATIFIED
    JITTERED
  }
  class Film {
    +width, height: int
    +samples_per_pixel: int
    +sampling_mode: SamplingMode
    +seed: int | None
    --
    +get_samples_for_pixel(i, j): list
    +render(scene, camera, filename, gamma_fix, integrator)
    +set_pixel(i, j, color)
  }
  class ONB {
    +u, v, w: glm.vec3
    --
    +local_to_global(dir): glm.vec3
    +global_to_local(dir): glm.vec3
    {static} +frisvad_branchless(n): tuple
  }
  class Scene {
    +objects: list[Shape]
    +lights: list[Light]
    +ambient_light: glm.vec3
    +background_color: glm.vec3
    +max_depth: int
    +ray_epsilon: float
    --
    +compute_intersection(ray): Hit | None
    +offset_point(pos, normal, dir): glm.vec3
    +can_spawn_ray(depth, max_depth): bool
    +transmittance(...)
    +trace_ray(ray, depth, max_depth)
  }
  class AmbientLight {
    +color: glm.vec3
  }
}

' ============================================================
' 2. shape
' ============================================================
package "shape" {
  note as ShapeNote
    shape.py
    Slide 4, p. 35 e p. 47-48 — fluxo de closest-hit.
  end note

  abstract class Shape {
    +material: Any
    --
    +intersect(ray, hit)
  }

  class Sphere {
    +center: glm.vec3
    +radius: float
    --
    +intersect(ray, hit)
  }
  class Plane {
    +pos: glm.vec3
    +normal: glm.vec3
    --
    +intersect(ray, hit)
  }
  class Box {
    +p_min, p_max: glm.vec3
    --
    +intersect(ray, hit)
  }
  class Triangle {
    +v0, v1, v2: glm.vec3
    +e1, e2: glm.vec3
    +geo_normal: glm.vec3
    --
    +intersect(ray, hit)
  }
  class TriangleMesh {
    +triangles: list[Triangle]
    +material: Any
    +vertices: list[glm.vec3]
    +faces: list[tuple]
    +name: str
    +accelerator: str
    +bvh: TriangleBVH | None
    --
    {static} +from_vertices_faces(verts, faces, material, name): TriangleMesh
    +intersect(ray, hit)
  }
  abstract class Instance {
    +shape: Shape
    +m: glm.mat4
    +m_inv: glm.mat4
    +m_inv_t: glm.mat4
    --
    +intersect(ray, hit)
  }
  class Translate
  class Rotate
}

Shape <|-- Sphere
Shape <|-- Plane
Shape <|-- Box
Shape <|-- Triangle
Shape <|-- TriangleMesh
Shape <|-- Instance
Instance <|-- Translate
Instance <|-- Rotate

' ============================================================
' 3. triangle_bvh
' ============================================================
package "triangle_bvh" {
  note as BvhNote
    triangle_bvh.py
    BVH local a TriangleMesh (median split, sem SAH).
  end note

  class AABB {
    +p_min, p_max: glm.vec3
    --
    {static} +from_triangles(triangles): AABB
    +intersects(ray, t_min, t_max): tuple
  }
  class TriangleBVHNode {
    +bounds: AABB
    +triangles: list | None
    +left, right: TriangleBVHNode | None
    +depth: int
    --
    +is_leaf(): bool
    +intersect(ray, hit)
  }
  class TriangleBVH {
    +root: TriangleBVHNode
    +node_count: int
    +leaf_count: int
    +max_depth: int
    --
    +intersect(ray, hit)
  }
}

TriangleBVHNode *-- AABB
TriangleBVH *-- TriangleBVHNode

' ============================================================
' 4. bsdf
' ============================================================
package "bsdf" {
  note as BsdfNote
    bsdf/base.py + bsdf/*.py
    Ref: PBRT 4e §9 "Reflection Models"
    is_specular()=True em DielectricBSDF e MirrorBSDF
    → ambos delta: NEE pula, peso MIS=1.
  end note

  abstract class BSDF {
    +eval(wo, wi): glm.vec3
    +sample(wo, u): dict | None
    +pdf(wo, wi): float
    +is_specular(): bool
  }

  class LambertianBSDF {
    +rho: glm.vec3
    --
    +eval(wo, wi): glm.vec3
    +sample(wo, u): dict
    +pdf(wo, wi): float
  }
  class EmissiveBSDF {
    +Le: glm.vec3
    --
    +eval(wo, wi): glm.vec3
    +sample(wo, u): dict | None
    +pdf(wo, wi): float
  }
  class DielectricBSDF {
    +ior: float
    +absorption: glm.vec3
    --
    +eval(wo, wi): glm.vec3
    +pdf(wo, wi): float
    +is_specular(): bool
    +sample(wo, u): dict | None
  }
  class MirrorBSDF {
    +eval(wo, wi): glm.vec3
    +pdf(wo, wi): float
    +is_specular(): bool
    +sample(wo, u): dict | None
  }
}

BSDF <|-- LambertianBSDF
BSDF <|-- EmissiveBSDF
BSDF <|-- DielectricBSDF
BSDF <|-- MirrorBSDF

' ============================================================
' 5. lights
' ============================================================
package "lights" {
  note as LightsNote
    lights/*.py
    NEE + MIS usam sample_Li() / pdf_Li().
    is_delta=True em PointLight → MIS weight=1.0.
  end note

  abstract class Light {
    +is_delta: bool
    --
    +contains(hit): bool
    +sample_Li(ref, u): dict | None
    +pdf_Li(ref, wi): float
    +radiance(scene, hit): tuple
    +sample_radiance(scene, hit): list
  }

  class PointLight {
    +pos: glm.vec3
    +power: glm.vec3
    --
    +sample_Li(ref, u): dict | None
    +pdf_Li(ref, wi): float
    +radiance(scene, hit): tuple
    +sample_radiance(scene, hit): list
  }

  enum AreaLightSamplingMode {
    REGULAR
    UNIFORM
    STRATIFIED
  }

  class AreaLight {
    +p, e_u, e_v: glm.vec3
    +power, Le: glm.vec3
    --
    +sample_Li(ref, u): dict | None
    +pdf_Li(ref, wi): float
    +radiance(scene, hit): tuple
    +sample_radiance(scene, hit): list
  }
  class RectAreaLight {
    +corner, edge_u, edge_v: glm.vec3
    +Le: glm.vec3
    +normal: glm.vec3
    +area: float
    +center: glm.vec3
    --
    +sample_Li(ref, u): dict | None
    +pdf_Li(ref, wi): float
  }

  class _BvhTriangle << (P,#E0FFE0) >> {
    +v0, v1, v2: glm.vec3
    +e1, e2: glm.vec3
    +normal: glm.vec3
    +area: float
    --
    +intersect(ray, hit): bool
  }

  class TriangleMeshLight {
    +vertices: list[glm.vec3]
    +faces: list[tuple]
    +Le: glm.vec3
    +triangles: list[_BvhTriangle]
    +total_area: float
    +cdf: list[float]
    +_bvh: TriangleBVH
    --
    +sample_Li(ref, u): dict | None
    +pdf_Li(ref, wi): float
  }
}

Light <|-- PointLight
Light <|-- AreaLight
Light <|-- RectAreaLight
Light <|-- TriangleMeshLight
AreaLight ..> AreaLightSamplingMode

TriangleMeshLight *-- TriangleBVH
TriangleMeshLight *-- _BvhTriangle

' ============================================================
' Relacionamentos cross-package
' ============================================================

Scene "1" *-- "*" Shape
Scene "1" *-- "*" Light
TriangleMesh o-- TriangleBVH
_BvhTriangle ..> Triangle : "mesmo contrato intersect(ray,hit)"
Film ..> Camera
Film ..> Scene
Film ..> SamplingMode
Camera ..> Ray
Hit ..> Ray : "set_face_normal()"

@enduml
